--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <div class="content">
+        <h1>Welcome Git</h1>
+
+
+    </div>
 </body>
 </html>
